# Camel-up-game

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  components.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: software-foundation-plan.md
src/camel_up/: __init__.py
src/camel_up/cli/: main.py
tests/: test_smoke.py
