[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "camel-up-game"
version = "0.1.0"
description = "Deterministic Camel Up game engine with interfaces for agents and Gymnasium-style RL environments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Liang Wang" },
]
dependencies = []

[project.scripts]
camel-up = "camel_up.cli.main:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
py-modules = ["components", "main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 88
target-version = "py310"
include = ["tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["tests"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["components"]
follow_imports = "skip"
